# ai-video

./: .env  .env.example  .gitignore  AGENTS.md  CHANGES.md  CREATIVE_MODE_UPDATE.md  CREATIVE_REIMAGINATION_GUIDE.md  IMPLEMENTATION_PLAN.md  KLING_WORKFLOW.md  PROMPT_FIELDS_UPDATE.md  README.md  camera_analysis.md  config.yaml  gemini.md  how-to-prompt.md  light-color-camera.md  pyproject.toml  requirements.txt  workflow.md
assets/runs/: run_20251002_013100.json
scripts/: ai-video
src/ai_video/: __init__.py  cli.py  export.py  gemini_client.py  logging.py  models.py  paths.py  safety.py  settings.py  storage.py  utils.py
src/ai_video/agents/: __init__.py  camera_analysis.py  prompt_from_user.py  prompt_generation.py  reimagination_agent.py  video_analysis.py
src/ai_video/data/: __init__.py  constants.py
src/ai_video/pipeline/: __init__.py  export.py  orchestrator.py
src/ai_video/prompts/: __init__.py  gemini_video_blueprint.md  image_prompt_template.md  reimagination_agent_system_prompt.md  video_prompt_template.md
tests/: conftest.py  test_gemini_client.py  test_video_analysis_timings.py
